fixed alignment

--- a/index-css/style.css
+++ b/index-css/style.css
@@ -3,8 +3,6 @@
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
-  text-align: left;
-
 }
 
 body {
